--- a/client-app/url-shortener-app/.gitignore
+++ b/client-app/url-shortener-app/.gitignore
@@ -3,23 +3,59 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+build/
+.out/
+.next/
+dist-ssr/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# TypeScript cache and build files
+*.tsbuildinfo
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.vscode/
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.env
+
+# Debug files
+*.log
+debug/
+debug.log.*
+
+# OS-specific files
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
+# Miscellaneous
+*.local
+*.cache/
+*.tmp
+
+# Git merge conflict files
+*.orig
+
+# Optional npm cache
+.npm/
+
+# Specific directories/files in src
+src/*.env
